# work-time-visualizer-rust

./: Cargo.toml  README.md  build.rs
src/: config.rs  main.rs  native_interop.rs  theme.rs  time_calc.rs  window.rs
