[package]
name = "work-time-visualizer"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Windows taskbar widget showing daily and weekly work-time progress"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_HiDpi",
]

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
